--- a/nyan-server/public/project_form.html
+++ b/nyan-server/public/project_form.html
@@ -26,10 +26,8 @@
     </style>
 </head>
 <body>
-    <form action="/api/projects" method="post">
-        <input placeholder="name" type="text" name="name" >
-        <label for="gif">gif</label>
-        <input id="gif" type="file" name="" id="gif">
+    <form action="/api/projects" enctype="multipart/form-data" method="post">
+        <input placeholder="name" type="text" name="title" >
         <label for="desc">description</label>    
         <textarea id="desc" name="description"  cols="30" rows="10"></textarea>
         <input placeholder="homepage" type="url" name="homepage" >
