limit and offset to projects query added

--- a/nyan-server/public/project_form.html
+++ b/nyan-server/public/project_form.html
@@ -32,6 +32,7 @@
         <textarea id="desc" name="description"  cols="30" rows="10"></textarea>
         <input placeholder="homepage" type="url" name="homepage" >
         <input placeholder="repo" type="url" name="repository" >
+        <input placeholder="priority" type="number" name="priority" >
         <label for="image">images</label>
         <input id="image" type="file" name="images"  multiple>
         <input type="submit" value="send">
